crates/zenith/tests/snapshots/screens__envelope_viewer__80x24__light.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·     ? keys
┌ call 3 · solar.ping · 0.52 ms ───────────────────────────────────────────────┐
│ request  sent 15:47:42.001 UTC                                               │
│ {                                                                            │
│   "jsonrpc": "2.0",                                                          │
│   "id": 3,                                                                   │
│   "method": "solar.ping",                                                    │
│   "params": {                                                                │
│     "message": "hello"                                                       │
│   }                                                                          │
│ }                                                                            │
│                                                                              │
│ response  received 15:47:42.002 UTC                                          │
│ {                                                                            │
│   "jsonrpc": "2.0",                                                          │
│   "id": 3,                                                                   │
│   "result": {                                                                │
│     "data": {                                                                │
│       "echo": "hello",                                                       │
│       "pong": true,                                                          │
│       "received_at": "2026-09-27T15:47:42.100521Z"                           │
│     },                                                                       │
└ ← → other calls  Esc close  ─────────────────────────────────────────────────┘
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 0.52 ms ─── in orbit 42s ───────────
--- every cell not listed is #17161C on #F5F1E8
 0:  0-7   #8C4907 on #F5F1E8 bold
 0: 10-18  #8C4907 on #F5F1E8 bold underlined
 0: 21-26  #555355 on #F5F1E8
 0: 29-33  #555355 on #F5F1E8
 0: 36-44  #555355 on #F5F1E8
 0: 45-72  #868482 on #F5F1E8
 0: 73-73  #8C4907 on #F5F1E8 bold
 0: 74-79  #555355 on #F5F1E8
 1:  0-0   #868482 on #F5F1E8
 1:  1-31  #8C4907 on #F5F1E8 bold
 1: 32-79  #868482 on #F5F1E8
 2:  0-0   #868482 on #F5F1E8
 2:  2-8   #8C4907 on #F5F1E8 bold
 2:  9-31  #555355 on #F5F1E8
 2: 79-79  #868482 on #F5F1E8
 3:  0-0   #868482 on #F5F1E8
 3:  2-2   #555355 on #F5F1E8
 3: 79-79  #868482 on #F5F1E8
 4:  0-0   #868482 on #F5F1E8
 4:  4-12  #8C4907 on #F5F1E8
 4: 13-14  #555355 on #F5F1E8
 4: 20-20  #555355 on #F5F1E8
 4: 79-79  #868482 on #F5F1E8
 5:  0-0   #868482 on #F5F1E8
 5:  4-7   #8C4907 on #F5F1E8
 5:  8-9   #555355 on #F5F1E8
 5: 10-10  #17161C on #F5F1E8 bold
 5: 11-11  #555355 on #F5F1E8
 5: 79-79  #868482 on #F5F1E8
 6:  0-0   #868482 on #F5F1E8
 6:  4-11  #8C4907 on #F5F1E8
 6: 12-13  #555355 on #F5F1E8
 6: 26-26  #555355 on #F5F1E8
 6: 79-79  #868482 on #F5F1E8
 7:  0-0   #868482 on #F5F1E8
 7:  4-11  #8C4907 on #F5F1E8
 7: 12-14  #555355 on #F5F1E8
 7: 79-79  #868482 on #F5F1E8
 8:  0-0   #868482 on #F5F1E8
 8:  6-14  #8C4907 on #F5F1E8
 8: 15-16  #555355 on #F5F1E8
 8: 79-79  #868482 on #F5F1E8
 9:  0-0   #868482 on #F5F1E8
 9:  4-4   #555355 on #F5F1E8
 9: 79-79  #868482 on #F5F1E8
10:  0-0   #868482 on #F5F1E8
10:  2-2   #555355 on #F5F1E8
10: 79-79  #868482 on #F5F1E8
11:  0-0   #868482 on #F5F1E8
11: 79-79  #868482 on #F5F1E8
12:  0-0   #868482 on #F5F1E8
12:  2-9   #8C4907 on #F5F1E8 bold
12: 10-36  #555355 on #F5F1E8
12: 79-79  #868482 on #F5F1E8
13:  0-0   #868482 on #F5F1E8
13:  2-2   #555355 on #F5F1E8
13: 79-79  #868482 on #F5F1E8
14:  0-0   #868482 on #F5F1E8
14:  4-12  #8C4907 on #F5F1E8
14: 13-14  #555355 on #F5F1E8
14: 20-20  #555355 on #F5F1E8
14: 79-79  #868482 on #F5F1E8
15:  0-0   #868482 on #F5F1E8
15:  4-7   #8C4907 on #F5F1E8
15:  8-9   #555355 on #F5F1E8
15: 10-10  #17161C on #F5F1E8 bold
15: 11-11  #555355 on #F5F1E8
15: 79-79  #868482 on #F5F1E8
16:  0-0   #868482 on #F5F1E8
16:  4-11  #8C4907 on #F5F1E8
16: 12-14  #555355 on #F5F1E8
16: 79-79  #868482 on #F5F1E8
17:  0-0   #868482 on #F5F1E8
17:  6-11  #8C4907 on #F5F1E8
17: 12-14  #555355 on #F5F1E8
17: 79-79  #868482 on #F5F1E8
18:  0-0   #868482 on #F5F1E8
18:  8-13  #8C4907 on #F5F1E8
18: 14-15  #555355 on #F5F1E8
18: 23-23  #555355 on #F5F1E8
18: 79-79  #868482 on #F5F1E8
19:  0-0   #868482 on #F5F1E8
19:  8-13  #8C4907 on #F5F1E8
19: 14-15  #555355 on #F5F1E8
19: 16-19  #17161C on #F5F1E8 bold
19: 20-20  #555355 on #F5F1E8
19: 79-79  #868482 on #F5F1E8
20:  0-0   #868482 on #F5F1E8
20:  8-20  #8C4907 on #F5F1E8
20: 21-22  #555355 on #F5F1E8
20: 79-79  #868482 on #F5F1E8
21:  0-0   #868482 on #F5F1E8
21:  6-7   #555355 on #F5F1E8
21: 79-79  #868482 on #F5F1E8
22:  0-1   #868482 on #F5F1E8
22:  2-4   #8C4907 on #F5F1E8 bold
22:  5-18  #555355 on #F5F1E8
22: 19-21  #8C4907 on #F5F1E8 bold
22: 22-29  #555355 on #F5F1E8
22: 30-79  #868482 on #F5F1E8
23:  0-2   #868482 on #F5F1E8
23:  3-3   #8C4907 on #F5F1E8
23:  4-6   #868482 on #F5F1E8
23:  7-17  #8C4907 on #F5F1E8 bold
23: 18-20  #555355 on #F5F1E8
23: 28-32  #868482 on #F5F1E8
23: 33-42  #555355 on #F5F1E8
23: 50-54  #868482 on #F5F1E8
23: 55-63  #555355 on #F5F1E8
23: 67-79  #868482 on #F5F1E8
