crates/zenith/tests/snapshots/screens__envelope_viewer__80x24__night.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·     ? keys
┌ call 3 · solar.ping · 0.52 ms ───────────────────────────────────────────────┐
│ request  sent 15:47:42.001 UTC                                               │
│ {                                                                            │
│   "jsonrpc": "2.0",                                                          │
│   "id": 3,                                                                   │
│   "method": "solar.ping",                                                    │
│   "params": {                                                                │
│     "message": "hello"                                                       │
│   }                                                                          │
│ }                                                                            │
│                                                                              │
│ response  received 15:47:42.002 UTC                                          │
│ {                                                                            │
│   "jsonrpc": "2.0",                                                          │
│   "id": 3,                                                                   │
│   "result": {                                                                │
│     "data": {                                                                │
│       "echo": "hello",                                                       │
│       "pong": true,                                                          │
│       "received_at": "2026-09-27T15:47:42.100521Z"                           │
│     },                                                                       │
└ ← → other calls  Esc close  ─────────────────────────────────────────────────┘
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 0.52 ms ─── in orbit 42s ───────────
--- every cell not listed is #F5F1E8 on #0B0C14
 0:  0-7   #FFC23D on #0B0C14 bold
 0: 10-18  #FFC23D on #0B0C14 bold underlined
 0: 21-26  #9C9A97 on #0B0C14
 0: 29-33  #9C9A97 on #0B0C14
 0: 36-44  #9C9A97 on #0B0C14
 0: 45-72  #646365 on #0B0C14
 0: 73-73  #FFC23D on #0B0C14 bold
 0: 74-79  #9C9A97 on #0B0C14
 1:  0-0   #646365 on #0B0C14
 1:  1-31  #FFC23D on #0B0C14 bold
 1: 32-79  #646365 on #0B0C14
 2:  0-0   #646365 on #0B0C14
 2:  2-8   #FFC23D on #0B0C14 bold
 2:  9-31  #9C9A97 on #0B0C14
 2: 79-79  #646365 on #0B0C14
 3:  0-0   #646365 on #0B0C14
 3:  2-2   #9C9A97 on #0B0C14
 3: 79-79  #646365 on #0B0C14
 4:  0-0   #646365 on #0B0C14
 4:  4-12  #FFC23D on #0B0C14
 4: 13-14  #9C9A97 on #0B0C14
 4: 20-20  #9C9A97 on #0B0C14
 4: 79-79  #646365 on #0B0C14
 5:  0-0   #646365 on #0B0C14
 5:  4-7   #FFC23D on #0B0C14
 5:  8-9   #9C9A97 on #0B0C14
 5: 10-10  #F5F1E8 on #0B0C14 bold
 5: 11-11  #9C9A97 on #0B0C14
 5: 79-79  #646365 on #0B0C14
 6:  0-0   #646365 on #0B0C14
 6:  4-11  #FFC23D on #0B0C14
 6: 12-13  #9C9A97 on #0B0C14
 6: 26-26  #9C9A97 on #0B0C14
 6: 79-79  #646365 on #0B0C14
 7:  0-0   #646365 on #0B0C14
 7:  4-11  #FFC23D on #0B0C14
 7: 12-14  #9C9A97 on #0B0C14
 7: 79-79  #646365 on #0B0C14
 8:  0-0   #646365 on #0B0C14
 8:  6-14  #FFC23D on #0B0C14
 8: 15-16  #9C9A97 on #0B0C14
 8: 79-79  #646365 on #0B0C14
 9:  0-0   #646365 on #0B0C14
 9:  4-4   #9C9A97 on #0B0C14
 9: 79-79  #646365 on #0B0C14
10:  0-0   #646365 on #0B0C14
10:  2-2   #9C9A97 on #0B0C14
10: 79-79  #646365 on #0B0C14
11:  0-0   #646365 on #0B0C14
11: 79-79  #646365 on #0B0C14
12:  0-0   #646365 on #0B0C14
12:  2-9   #FFC23D on #0B0C14 bold
12: 10-36  #9C9A97 on #0B0C14
12: 79-79  #646365 on #0B0C14
13:  0-0   #646365 on #0B0C14
13:  2-2   #9C9A97 on #0B0C14
13: 79-79  #646365 on #0B0C14
14:  0-0   #646365 on #0B0C14
14:  4-12  #FFC23D on #0B0C14
14: 13-14  #9C9A97 on #0B0C14
14: 20-20  #9C9A97 on #0B0C14
14: 79-79  #646365 on #0B0C14
15:  0-0   #646365 on #0B0C14
15:  4-7   #FFC23D on #0B0C14
15:  8-9   #9C9A97 on #0B0C14
15: 10-10  #F5F1E8 on #0B0C14 bold
15: 11-11  #9C9A97 on #0B0C14
15: 79-79  #646365 on #0B0C14
16:  0-0   #646365 on #0B0C14
16:  4-11  #FFC23D on #0B0C14
16: 12-14  #9C9A97 on #0B0C14
16: 79-79  #646365 on #0B0C14
17:  0-0   #646365 on #0B0C14
17:  6-11  #FFC23D on #0B0C14
17: 12-14  #9C9A97 on #0B0C14
17: 79-79  #646365 on #0B0C14
18:  0-0   #646365 on #0B0C14
18:  8-13  #FFC23D on #0B0C14
18: 14-15  #9C9A97 on #0B0C14
18: 23-23  #9C9A97 on #0B0C14
18: 79-79  #646365 on #0B0C14
19:  0-0   #646365 on #0B0C14
19:  8-13  #FFC23D on #0B0C14
19: 14-15  #9C9A97 on #0B0C14
19: 16-19  #F5F1E8 on #0B0C14 bold
19: 20-20  #9C9A97 on #0B0C14
19: 79-79  #646365 on #0B0C14
20:  0-0   #646365 on #0B0C14
20:  8-20  #FFC23D on #0B0C14
20: 21-22  #9C9A97 on #0B0C14
20: 79-79  #646365 on #0B0C14
21:  0-0   #646365 on #0B0C14
21:  6-7   #9C9A97 on #0B0C14
21: 79-79  #646365 on #0B0C14
22:  0-1   #646365 on #0B0C14
22:  2-4   #FFC23D on #0B0C14 bold
22:  5-18  #9C9A97 on #0B0C14
22: 19-21  #FFC23D on #0B0C14 bold
22: 22-29  #9C9A97 on #0B0C14
22: 30-79  #646365 on #0B0C14
23:  0-2   #646365 on #0B0C14
23:  3-3   #FFC23D on #0B0C14
23:  4-6   #646365 on #0B0C14
23:  7-17  #FFC23D on #0B0C14 bold
23: 18-20  #9C9A97 on #0B0C14
23: 28-32  #646365 on #0B0C14
23: 33-42  #9C9A97 on #0B0C14
23: 50-54  #646365 on #0B0C14
23: 55-63  #9C9A97 on #0B0C14
23: 67-79  #646365 on #0B0C14
